--- a/app/views/resumes/index.html.erb
+++ b/app/views/resumes/index.html.erb
@@ -5,14 +5,13 @@
 
   <hr>
 
-
-  <table>
+<%=render :partial => "facets"%>
+  <table class="resume_list">
     <thead>
       <tr>
         <th>Name</th>
         <th>Telephone Number</th>
         <th>Email</th>
-        <th colspan="3"></th>
       </tr>
     </thead>
 
@@ -32,4 +31,3 @@
 
 
 
-<%=render :partial => "facets"%>
