--- a/app/views/resumes/_form.erb
+++ b/app/views/resumes/_form.erb
@@ -1,5 +1,6 @@
   <%= form_tag search_resumes_path, :method => 'get' do %>
     <%= label_tag :query %>
     <%= text_field_tag :q, params[:q] %>
+    <%= text_field_tag 'with[email]', params[:with] && params[:with][:email] %>
     <%= submit_tag :search %>
   <% end %>
